terraform/modules/istio/manifests/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress # this should match the label of the istio-ingressgateway deployment
  namespace: "${istio_namespace}"
spec:
  selector:
    app: istio-ingress # this should match the label of the istio-ingressgateway deployment
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "${dns_name}"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "${tls_secret_name}"
      hosts:
        - "${dns_name}"
